# rs-hexmicro

./: .gitignore  Cargo.toml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
hex_microservice/: all.html  index.html  sidebar-items.js
hex_microservice/api/: index.html  sidebar-items.js  struct.Handler.html  trait.RedirectHandler.html
hex_microservice/repository/: index.html  sidebar-items.js  struct.MongoRepository.html  struct.RedisRepository.html
hex_microservice/repository/mongodb/: struct.MongoRepository.html
hex_microservice/repository/redis/: struct.RedisRepository.html
hex_microservice/serializer/: index.html  sidebar-items.js  struct.JsonSerializer.html  struct.MsgpackSerializer.html
hex_microservice/serializer/json/: struct.JsonSerializer.html
hex_microservice/serializer/msgpack/: struct.MsgpackSerializer.html
hex_microservice/short_url/: index.html  sidebar-items.js  struct.Redirect.html  struct.Service.html  trait.RedirectRepository.html  trait.RedirectSerializer.html  trait.RedirectService.html
hex_microservice/short_url/error/: enum.RedirectErr.html  index.html  sidebar-items.js
hex_microservice/short_url/model/: struct.Redirect.html
hex_microservice/short_url/repository/: trait.RedirectRepository.html
hex_microservice/short_url/serializer/: trait.RedirectSerializer.html
src/: lib.rs  main.rs
src/api/: mod.rs
src/hex_microservice/: lib.rs.html
src/repository/: mod.rs
src/serializer/: mod.rs
src/short_url/: error.rs  mod.rs  model.rs  repository.rs  serializer.rs  service.rs
(+34 files in other folders)
