[package]
name = "hex-micro"
version = "0.1.0"
authors = ["Arthur E. Jones <PartyLich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9.0"
bson = "0.14.0"
serde = "1.0.104"
serde_json = "1.0.45"
rmp-serde = "0.14.0"
