[package]
name = "hex_microservice"
version = "0.1.0"
authors = ["Arthur E. Jones <PartyLich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "hex_micro"
# path = "src/lib.rs"
#
# [[bin]]
# name = "main"
# path = "src/main.rs"

[dependencies]
mongodb = "0.9.0"
bson = "0.14.0"
serde = "1.0.104"
serde_json = "1.0.45"
rmp-serde = "0.14.3"
redis = "0.15.1"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
bytes = "0.5.4"
shortid = "1.0.6"
